kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: snake-game-service
spec:
  selector:
    app: snake-game
  ports:
    - port: 80         # Public-facing port
      targetPort: 3000 # Port your app listens on inside the container
  type: ClusterIP       # Use LoadBalancer if not using Ingress
